<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    android:id="@+id/fragment_edit"
    style="@style/BackgroundContainer"
    tools:context=".MainActivity"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    android:padding="10dp"
    android:background="@drawable/corners"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <com.jackandphantom.circularimageview.RoundedImage
        android:id="@+id/event_inf_photo_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:adjustViewBounds="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.026"
        tools:srcCompat="@tools:sample/avatars" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/event_inf_edit_1"
        style="@style/TextLabel"
        android:hint="@string/event_description"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/event_inf_photo_1"
        app:layout_constraintVertical_bias="0.039"
        app:layout_constraintVertical_chainStyle="packed"
        app:startIconDrawable="@xml/ic_info">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minLines="5"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.jackandphantom.circularimageview.RoundedImage
        android:id="@+id/event_inf_photo_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:adjustViewBounds="true"
        app:layout_constraintTop_toBottomOf="@+id/event_inf_edit_1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintVertical_bias="0.026"
        tools:srcCompat="@tools:sample/avatars" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/event_inf_edit_2"
        style="@style/TextLabel"
        android:hint="@string/event_description"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/event_inf_photo_2"
        app:layout_constraintVertical_bias="0.039"
        app:layout_constraintVertical_chainStyle="packed"
        app:startIconDrawable="@xml/ic_info">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minLines="5"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/event_inf_title"
        style="@style/TextLabel"
        android:hint="@string/event_title"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/event_inf_edit_2"
        app:layout_constraintVertical_bias="0.039"
        app:layout_constraintVertical_chainStyle="packed"
        app:startIconDrawable="@xml/ic_project_icon">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minLines="5"/>

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/event_inf_btn_edit"
        style="@style/styleBtn"
        android:layout_width="147dp"
        android:layout_height="30dp"
        android:layout_marginTop="15dp"
        android:insetLeft="0dp"
        android:insetTop="0dp"
        android:insetBottom="0dp"
        android:paddingLeft="0dp"
        android:paddingTop="0dp"
        android:paddingRight="0dp"
        android:paddingBottom="0dp"
        android:text="Редактировать"
        app:iconPadding="0dp"
        app:layout_constraintEnd_toEndOf="@+id/event_inf_btn_cancel"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="@+id/event_inf_btn_delete"
        app:layout_constraintTop_toBottomOf="@+id/event_inf_btn_delete" />

    <Button
        android:id="@+id/event_inf_btn_cancel"
        style="@style/styleBtn"
        android:layout_width="87dp"
        android:layout_height="30dp"
        android:insetLeft="0dp"
        android:insetTop="0dp"
        android:insetBottom="0dp"
        android:paddingLeft="0dp"
        android:paddingTop="0dp"
        android:paddingRight="0dp"
        android:paddingBottom="0dp"
        android:text="@string/cancel"
        app:iconPadding="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/event_inf_btn_delete"
        app:layout_constraintTop_toTopOf="@+id/event_inf_btn_delete" />

    <Button
        android:id="@+id/event_inf_btn_delete"
        style="@style/styleBtn"
        android:layout_width="87dp"
        android:layout_height="30dp"
        android:layout_marginTop="15dp"
        android:insetLeft="0dp"
        android:insetTop="0dp"
        android:insetBottom="0dp"
        android:paddingLeft="0dp"
        android:paddingTop="0dp"
        android:paddingRight="0dp"
        android:paddingBottom="0dp"
        android:text="@string/delete"
        app:iconPadding="0dp"
        app:layout_constraintEnd_toStartOf="@+id/event_inf_btn_cancel"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/event_inf_title" />


</androidx.constraintlayout.widget.ConstraintLayout>